# quick-quick-run-gui

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.en.md  README.md  app-window.html  components.json  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
.agents/skills/tauri-v2/: SKILL.md
.github/scripts/: generate-updater-json.mjs
.github/workflows/: build.yml  ci.yml  release.yml  test.yml
src/: App.vue  AppWindow.vue  app-window.ts  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: app-window.json  default.json  main.json
src-tauri/icons/: icon.icns
src-tauri/src/: dock.rs  favicon.rs  html_title.rs  image_util.rs  lib.rs  port_tools.rs  process.rs  tray.rs  url_check.rs
src/components/app/: AppDetailForm.vue  AppIcon.vue  AppLoadingSkeleton.vue  AppSidebar.vue  LaunchActionGroup.vue  LogConsole.vue  LogDialog.vue  PortManagerDialog.vue  RunningAppCard.vue  SettingsDialog.vue  ToastMessages.vue
src/components/app/capabilities/: AppCapabilityStack.vue  CommandCapability.vue  CommandParametersCapability.vue  NameCapability.vue  RestartCapability.vue  RetryCapability.vue  ScheduleCapability.vue  StartupCapability.vue  TypeTargetCapability.vue  WebUrlCapability.vue  WindowSizeCapability.vue  WorkingDirectoryCapability.vue  capabilityRegistry.ts
src/components/command/: CommandTemplateTooltip.vue  RunParametersDialog.vue
src/components/schedule/: CronSchedulePicker.vue
src/components/ui/button/: Button.vue  variants.ts
src/components/ui/clearable-input/: ClearableInput.vue  index.ts
src/components/ui/dialog-frame/: DialogFrame.vue  index.ts
src/components/ui/input/: Input.vue
src/components/ui/input-group/: InputGroup.vue  InputGroupAddon.vue  InputGroupButton.vue  InputGroupInput.vue  index.ts
src/components/ui/switch/: Switch.vue
src/components/ui/toggle-group/: ToggleGroup.vue  ToggleGroupItem.vue
src/components/ui/tooltip/: TooltipContent.vue  index.ts
src/composables/: useAppFavicons.ts  useApps.ts  useLauncher.ts  useLogPreview.ts  useLogs.ts  useMessage.ts  useSettings.ts
src/lib/: appDisplay.ts  cron.ts  delay.ts  error.ts  store.ts  theme.ts  time.ts
src/plugins/: pinia.ts
src/stores/: appSession.ts  launcher.ts  logs.ts  message.ts  settings.ts
src/stores/apps/: appCatalog.ts  appDefaults.ts  appEditor.ts  index.ts
tests/e2e/: main.spec.ts
tests/fixtures/: apps.ts
tests/helpers/: dom.ts  tauri.ts
tests/integration/: useApps.integration.test.ts  useLauncher.integration.test.ts
tests/setup/: vitest.ts
tests/unit/: App.test.ts  AppWindow.test.ts  CronSchedulePicker.test.ts  cron.test.ts  store.test.ts  useLogs.test.ts  useSettings.test.ts
tests/unit/components/app/: AppDetailForm.test.ts  AppSidebar.test.ts  LaunchActionGroup.test.ts  LogConsole.test.ts  LogDialog.test.ts  PortManagerDialog.test.ts  RunningAppCard.test.ts  SettingsDialog.test.ts  ToastMessages.test.ts
tests/unit/components/command/: RunParametersDialog.test.ts
tests/unit/components/schedule/: CronSchedulePicker.test.ts
tests/unit/composables/: useAppFavicons.test.ts  useLogs.test.ts  useMessage.test.ts  useSettings.test.ts
tests/unit/lib/: delay.test.ts  store.test.ts  theme.test.ts  time.test.ts
tests/unit/stores/: logs.test.ts  message.test.ts  settings.test.ts
(+9 files in other folders)
