[package]
name = "quick-quick-run-gui"
version = "0.1.0"
description = "通用 Web App GUI 包装器"
authors = ["you"]
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
tokio = { version = "1", features = ["time"] }
libc = "0.2"
