[package]
name = "quick-quick-run-gui"
version = "0.1.0"
description = "通用 Web App GUI 包装器"
authors = ["you"]
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
tokio = { version = "1", features = ["time", "net", "rt", "rt-multi-thread", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
image = "0.25"
base64 = "0.22.1"
urlencoding = "2.1.3"
tauri-plugin-store = "2.4.2"
tauri-plugin-dialog = "2.7.0"
tauri-plugin-fs = "2.5.0"
scraper = "0.26.0"
command-group = "5.0.1"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSImage", "NSGraphics", "objc2-core-foundation"] }
objc2-foundation = { version = "0.3", features = ["NSData", "NSGeometry", "objc2-core-foundation"] }
